<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Auto Redial</string>

  <string name="general">Settings</string>

  <string name="autoredial">Auto Redial</string>

  <string name="autocallback">Auto Callback</string>

  <string name="confirmation">Call Confirm</string>

  <string name="additional">Additional</string>

  <string name="policy">Privacy Policy</string>
  <string name="rate">Rate app</string>
  <string name="version">Version: %s</string>
  <string name="reset">Reset</string>

  <string name="developer">Maintainer: %s</string>
  <string name="send_mail_to">Send mail to the author?</string>
  <string name="send_mail">Send mail…</string>

  <string name="remember">Remember!</string>
  <string name="mainHelp">The program runs automatically after an unsuccessful dialing!</string>


  <string name="ask_to_redial">Ask before redialing</string>

  <string name="attempts">Attempts</string>
  <string name="attempts_dialog_message">Attempts %s</string>
  <string name="attempts_dialog_title">Number of dialing attempts</string>

  <string name="pause">Pause</string>
  <string name="pause_sum">Wait %s sec between attempts</string>
  <string name="pause_dialog_message">Pause %s sec</string>
  <string name="pause_dialog_title">Pause between attempts</string>

  <string name="duration">Max attempt\'s duration</string>
  <string name="duration_sum">Wait %s sec before hangup</string>
  <string name="duration_dialog_message">Max attempt duration %s sec</string>
  <string name="duration_dialog_title">Time to wait before hangup</string>

  <string name="confirm">Min call duration</string>
  <string name="confirm_sum">Redial if call shorter %s sec</string>
  <string name="confirm_dialog_message">Min duration %s sec</string>
  <string name="confirm_dialog_title">Call is successful if it is longer</string>

  <string name="status">Status</string>
  <string name="status_sum">Show status dialog each time after redialing</string>

  <string name="speaker">Speakerphone</string>
  <string name="speaker_delay">Speakerphone delay</string>
  <string name="speaker_delay_sum">Turn on after %s msec</string>
  <string name="speaker_delay_message">Speakerphone delay %s msec</string>
  <string name="speaker_delay_title">Delay before turn speaker on while redialing</string>


  <!-- Section Auto Callback -->
  <string name="callback_dialog">Callback dialog</string>
  <string name="callback_dialog_sum_on">Enabled</string>
  <string name="callback_dialog_sum_off">Disabled</string>

  <string name="autocallback_sum_on">According to the list</string>
  <string name="autocallback_sum_off">Disabled</string>

  <string name="rejected_list">List for auto callback</string>


  <!-- Section List of auto callback -->
  <string name="rejected_list_caution">This function doesn\'t work, if your phone indicates rejected calls like missed calls.</string>
  <string name="rejected_list_help">You should use this list when you have someone, whose money you want to save. It may be your girlfriend/boyfriend, your parents or grandparents, your friend who has expensive call rate. Just reject a call, and your phone immediately will call them back.</string>

  <string name="add">Add</string>
  <string name="caution">Caution</string>


  <!-- Section Call confirm -->
  <string name="confirmStatus">Call Confirm Status</string>
  <string name="confirm_exclude_ussd">Exclude USSD codes</string>
  <string name="confirm_exclude_ussd_sum">Like *100# and #100#</string>
  <string name="confirm_exclude_unknowns">Exclude unknown numbers</string>
  <string name="confirm_sensor">Use proximity sensor</string>
  <string name="confirm_when_headset">Don\'t ask when headset connected</string>


  <!-- Dialog autoredial -->
  <string name="redialLast">Redial last call?</string>


  <!-- Notification status -->
  <string name="redialing">Redialing</string>


  <!-- Dialog status -->
  <string formatted="false" name="attemptString">Attempt %d from %d</string>
  <string name="hide">Hide</string>
  <string name="now">Now</string>


  <!-- Dialog callback -->
  <string name="redialRejected">Dial rejected call?</string>


  <!-- Widget status -->
  <string name="widget_status">Switch</string>
  <string name="on">On</string>
  <string name="off">Off</string>

  <!-- Widget last -->
  <string name="widget_last">Dial last</string>

  <string name="permissions_error">Permissions Error</string>
  <string name="permissions_error_desc">Required permissions have not been granted</string>
  <string name="rate_key" translatable="false">rate</string>
  <string name="version_key" translatable="false">version</string>
  <string name="reset_key" translatable="false">reset</string>
  <string name="autoredial_enabled_key" translatable="false">autoredial_enabled</string>
  <string name="common_notifications_channel" translatable="false">Common notifications</string>
  <string name="service_status">Service status</string>
  <string name="autoredial_settings">Auto Redial - Settings</string>
  <string name="enabled">Enabled</string>
  <string name="disabled">Disabled</string>
  <string name="ask_to_redial_on">Ask to start redialing after a busy call</string>
  <string name="ask_to_redial_off">Start redialing automatically after a busy call</string>
  <string name="attempts_sum">Try to redial %s times</string>
  <string name="autocallback_settings">Auto Callback - settings</string>
  <string name="do_not_hangup">Do not hangup</string>
</resources>